// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with name 1`] = `
"class C {
}"
`;

exports[`should return correctly with name, abstract 1`] = `
"abstract class C {
}"
`;

exports[`should return correctly with name, export 1`] = `
"export class C {
}"
`;

exports[`should return correctly with name, export, abstract, generics, members 1`] = `
"export abstract class C<T, U> {
    fn(): any;
    [key: string]: any;
}"
`;

exports[`should return correctly with name, generics 1`] = `
"class C<T, U> {
}"
`;

exports[`should return correctly with name, members 1`] = `
"class C {
    fn(): any;
    [key: string]: any;
}"
`;
